--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 		p{font-size:1.2rem; line-height: 1.6; padding-right:50px; padding-left:50px; padding-bottom: 100px; padding-top: 20px; hyphens:no; color:#9e9e9e;}
 		footer{padding-top:300px; padding-bottom:0px; text-align: left;}
 		footer p{font-size: 1rem}
-		h1,h2,header@font-face{font-family: 'MapoDanginRiPowerPlant';src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoDPPA.woff') format('woff');font-weight: normal;font-display: swap;}
-		p@font-face {font-family: 'NanumSquareRound';src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff');font-weight: normal;font-display: swap;}
+		@font-face{font-family: 'MapoDanginRiPowerPlant';src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoDPPA.woff') format('woff');font-weight: normal;font-display: swap;}
+		@font-face {font-family: 'NanumSquareRound';src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff');font-weight: normal;font-display: swap;}
+			h1,h2,header{font-family:'MapoDanginRiPowerPlant'}
+			p{font-family: 'NanumSquareRound'}
 	</style>
 </head>
 <body>
@@ -150,4 +152,5 @@
   		</div>
 	</footer>
 </body>
+
 </html>
